# resume-chatbot

./: .gitignore  LICENSE  pyproject.toml
api/: chain.py  doclangchain.txt  main.py  pigtronic.txt  prompts.py  test_api.ipynb  testfunction.ipynb
streamlit/: app.py
test/: langchain.ipynb  openai.ipynb  test_openai.ipynb
