[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.6",
    "openai>=1.100.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
    "uvicorn>=0.35.0",
]
